tests/baselines/reference/subtypingWithObjectMembers.errors.txt
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(13,5): error TS2610: Class 'A' defines instance member property 'foo', so extended class 'B' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(14,5): error TS2416: Property 'bar' in type 'B' is not assignable to the same property in base type 'A'.
  Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(14,5): error TS2610: Class 'A' defines instance member property 'bar', so extended class 'B' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(23,5): error TS2610: Class 'A2' defines instance member property '1', so extended class 'B2' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(24,5): error TS2416: Property '2' in type 'B2' is not assignable to the same property in base type 'A2'.
  Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(24,5): error TS2610: Class 'A2' defines instance member property '2.0', so extended class 'B2' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(33,5): error TS2610: Class 'A3' defines instance member property ''1'', so extended class 'B3' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(34,5): error TS2416: Property ''2.0'' in type 'B3' is not assignable to the same property in base type 'A3'.
  Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(34,5): error TS2610: Class 'A3' defines instance member property ''2.0'', so extended class 'B3' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(44,9): error TS2610: Class 'A' defines instance member property 'foo', so extended class 'B' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(45,9): error TS2416: Property 'bar' in type 'B' is not assignable to the same property in base type 'A'.
  Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(45,9): error TS2610: Class 'A' defines instance member property 'bar', so extended class 'B' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(54,9): error TS2610: Class 'A2' defines instance member property '1', so extended class 'B2' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(55,9): error TS2416: Property '2' in type 'B2' is not assignable to the same property in base type 'A2'.
  Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(55,9): error TS2610: Class 'A2' defines instance member property '2.0', so extended class 'B2' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(64,9): error TS2610: Class 'A3' defines instance member property ''1'', so extended class 'B3' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(65,9): error TS2416: Property ''2.0'' in type 'B3' is not assignable to the same property in base type 'A3'.
  Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts(65,9): error TS2610: Class 'A3' defines instance member property ''2.0'', so extended class 'B3' must use 'declare' to make it ambient.


==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembers.ts (18 errors) ====
    class Base { foo: string; }
    class Derived extends Base { bar: string; }
    class Derived2 extends Derived { baz: string; }
    
    // N and M have the same name, same accessibility, same optionality, and N is a subtype of M
    // foo properties are valid, bar properties cause errors in the derived class declarations
    class A {
        foo: Base;
        bar: Base;
    }
    
    class B extends A {
        foo: Derived; // ok
        ~~~
!!! error TS2610: Class 'A' defines instance member property 'foo', so extended class 'B' must use 'declare' to make it ambient.
        bar: string; // error
        ~~~
!!! error TS2416: Property 'bar' in type 'B' is not assignable to the same property in base type 'A'.
!!! error TS2416:   Type 'string' is not assignable to type 'Base'.
        ~~~
!!! error TS2610: Class 'A' defines instance member property 'bar', so extended class 'B' must use 'declare' to make it ambient.
    }
    
    class A2 {
        1: Base; 
        2.0: Base;
    }
    
    class B2 extends A2 {
        1: Derived; // ok
        ~
!!! error TS2610: Class 'A2' defines instance member property '1', so extended class 'B2' must use 'declare' to make it ambient.
        2: string; // error
        ~
!!! error TS2416: Property '2' in type 'B2' is not assignable to the same property in base type 'A2'.
!!! error TS2416:   Type 'string' is not assignable to type 'Base'.
        ~
!!! error TS2610: Class 'A2' defines instance member property '2.0', so extended class 'B2' must use 'declare' to make it ambient.
    }
    
    class A3 {
        '1': Base;
        '2.0': Base;
    }
    
    class B3 extends A3 {
        '1': Derived; // ok
        ~~~
!!! error TS2610: Class 'A3' defines instance member property ''1'', so extended class 'B3' must use 'declare' to make it ambient.
        '2.0': string; // error
        ~~~~~
!!! error TS2416: Property ''2.0'' in type 'B3' is not assignable to the same property in base type 'A3'.
!!! error TS2416:   Type 'string' is not assignable to type 'Base'.
        ~~~~~
!!! error TS2610: Class 'A3' defines instance member property ''2.0'', so extended class 'B3' must use 'declare' to make it ambient.
    }
    
    module TwoLevels {
        class A {
            foo: Base;
            bar: Base;
        }
    
        class B extends A {
            foo: Derived2; // ok
            ~~~
!!! error TS2610: Class 'A' defines instance member property 'foo', so extended class 'B' must use 'declare' to make it ambient.
            bar: string; // error
            ~~~
!!! error TS2416: Property 'bar' in type 'B' is not assignable to the same property in base type 'A'.
!!! error TS2416:   Type 'string' is not assignable to type 'Base'.
            ~~~
!!! error TS2610: Class 'A' defines instance member property 'bar', so extended class 'B' must use 'declare' to make it ambient.
        }
    
        class A2 {
            1: Base;
            2.0: Base;
        }
    
        class B2 extends A2 {
            1: Derived2; // ok
            ~
!!! error TS2610: Class 'A2' defines instance member property '1', so extended class 'B2' must use 'declare' to make it ambient.
            2: string; // error
            ~
!!! error TS2416: Property '2' in type 'B2' is not assignable to the same property in base type 'A2'.
!!! error TS2416:   Type 'string' is not assignable to type 'Base'.
            ~
!!! error TS2610: Class 'A2' defines instance member property '2.0', so extended class 'B2' must use 'declare' to make it ambient.
        }
    
        class A3 {
            '1': Base;
            '2.0': Base;
        }
    
        class B3 extends A3 {
            '1': Derived2; // ok
            ~~~
!!! error TS2610: Class 'A3' defines instance member property ''1'', so extended class 'B3' must use 'declare' to make it ambient.
            '2.0': string; // error
            ~~~~~
!!! error TS2416: Property ''2.0'' in type 'B3' is not assignable to the same property in base type 'A3'.
!!! error TS2416:   Type 'string' is not assignable to type 'Base'.
            ~~~~~
!!! error TS2610: Class 'A3' defines instance member property ''2.0'', so extended class 'B3' must use 'declare' to make it ambient.
        }
    }